Fix ARC notification crash.

Make ArcCustomNotificationView::SlideHelper operate on the correct
layer, i.e. that which is sliding out.

This is meant as a temporary hack to address the crash, but the code
still needs to be restructured to reduce fragility and improve test
coverage.

BUG=718965

Review-Url: https://codereview.chromium.org/2863163002
Cr-Commit-Position: refs/heads/master@{#469787}

Former-commit-id: 99c145d628465ca7c71f46ae39fe875466e3fb5e